@startuml

title __SYSTEMDESIGN's Class Diagram__\n

  namespace ParkingLotSystemDesign {
    interface ParkingLotSystemDesign.IManager {
    }
  }
  

  namespace ParkingLotSystemDesign {
    interface ParkingLotSystemDesign.ISlot {
    }
  }
  

  namespace ParkingLotSystemDesign {
    interface ParkingLotSystemDesign.ISlotParkStrategy {
    }
  }
  

  namespace ParkingLotSystemDesign {
    interface ParkingLotSystemDesign.ITicket {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.ParkingLot {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.ParkingLotManager {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.Slot {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.SlotEntity {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.SlotParkDefaultStrategy {
    }
  }
  

  namespace ParkingLotSystemDesign {
    enum SlotSize {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.Ticket {
    }
  }
  

  namespace ParkingLotSystemDesign {
    enum TicketType {
    }
  }
  

  namespace ParkingLotSystemDesign {
    class ParkingLotSystemDesign.Vehicle {
    }
  }
  

  namespace ParkingLotSystemDesign {
    enum VehicleType {
    }
  }
  

  ParkingLotSystemDesign.ParkingLot o-- ParkingLotSystemDesign.IManager : parkingLotManager
  ParkingLotSystemDesign.ParkingLotManager .up.|> ParkingLotSystemDesign.IManager
  ParkingLotSystemDesign.Slot .up.|> ParkingLotSystemDesign.ISlot
  ParkingLotSystemDesign.Slot o-- ParkingLotSystemDesign.SlotEntity : slotEntity
  ParkingLotSystemDesign.Slot o-- ParkingLotSystemDesign.ISlotParkStrategy : slotParkStrategy
  ParkingLotSystemDesign.SlotEntity o-- ParkingLotSystemDesign.SlotSize : slotSize
  ParkingLotSystemDesign.SlotParkDefaultStrategy .up.|> ParkingLotSystemDesign.ISlotParkStrategy
  ParkingLotSystemDesign.Ticket .up.|> ParkingLotSystemDesign.ITicket
  ParkingLotSystemDesign.Ticket o-- ParkingLotSystemDesign.ISlot : slot
  ParkingLotSystemDesign.Ticket o-- ParkingLotSystemDesign.TicketType : ticketType
  ParkingLotSystemDesign.Ticket o-- ParkingLotSystemDesign.Vehicle : vehicle
  ParkingLotSystemDesign.Vehicle o-- ParkingLotSystemDesign.VehicleType : vehicleType


right footer

https://github.com/HanQingZhen-JayHan/SystemDesign
endfooter

@enduml
